Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41894

QPainter::setLayoutDirection doesn't work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.15.1
    • 5.3.1
    • None
    • 2
    • 565c2e8cf9b7ed59a49256e6576137c92f17d047 (qt/qtbase/dev) dcd63ac1f3b2e8b5c88f5e0d9a0fc40d60625f59 (qt/qtbase/5.15)
    • Da Vinci sprint 8, Da Vinci sprint 9

    Description

      When creating a QImage, then QPainter(&image), setting painter.setLayoutDirection(Qt::RightToLeft) isn't taken into account (even if painter.layoutDirection then returns Qt::RightToLeft) because when calling painter.drawText, the direction is still left to right.

      I'm not sure if it exists any restriction that would explain why it doesn't work in my case, but the documentation doesn't mention anything special (unless I missed something).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paulwicking Paul Wicking
            arnaud.bienner Arnaud Bienner
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes