Doc: Specify QTextOption behavior in drawText

Be more specific about overriding behavior when using
the drawText overload that takes a QTextOption argument.

Fixes: QTBUG-41894
Change-Id: I8b38cb383005f1a07f4c6d70050e0d2cbb551521
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 565c2e8cf9b7ed59a49256e6576137c92f17d047)
Reviewed-by: Paul Wicking <paul.wicking@qt.io>